package Sparse_Matrix;

message Sparse_Matrix_Entry_Float {
	optional int64 j = 1;
	optional float a = 2;
}

message Sparse_Matrix_Entry_Float_Array {
	optional int64 m = 1; 
	repeated Sparse_Matrix_Entry_Float elem = 2;
} 

message Int_Array {
	optional int64 m = 1;
	repeated int64 elem = 2;
}

message Sparse_Matrix_Float {
	optional int64 n = 1;
	optional Int_Array offsets = 2;
	optional Sparse_Matrix_Entry_Float_Array A = 3;
}
